[package]
name = "guardian"
version = "0.1.0"
authors = ["overflow <stack-99@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["std", "handleapi", "namedpipeapi", "tlhelp32", "processenv", "synchapi", "winerror", "processthreadsapi", "winbase"] }

[dependencies]
sysinfo = "0.15"
regex   = "1"
timer   = "0.2"
chrono = "0.4"
ctrlc = "3.1.7"
winreg = "0.8"
widestring = "0.2.2"
pe = "0.1.1"
walkdir = "2"

[dependencies.async-std]
version = "1.8.0"
features = ["attributes"]